Added OTP apis
